...
        noButtonState.isEnabled = true
    }

    func show(quiz result: QuizResultsViewModel) {
        let message = presenter.makeResultsMessage()
        
        let viewModel = AlertModel(ID: "FinishingAlert",
                                   title: result.title,
                                   message: message,
                                   buttonText: result.buttonText) { [weak self] in
            guard let self = self else { return }
            self.presenter.restartGame()
        }
...
